@@ -2,6 +2,7 @@ cupt (1.3.0) UNRELEASED; urgency=low
 
   * Cupt:
     - Cache:
+      - 'get_satisfying_versions': don't sort result.
       - BinaryVersion:
         - Rewritten parsing the version entry using different approach.
           Speeded up parsing significantly.
